Added charsetOverride field to nsIMsgWindow, so msgCompose can use it for quoting, bug 111055, r=ducarroz, sr=sspitzer.